Isolate Title SONY LOGO

--- a/docs/development-docs/CloudSDK_Tutorial_ConsoleAccessLibrary_TypeScript.adoc
+++ b/docs/development-docs/CloudSDK_Tutorial_ConsoleAccessLibrary_TypeScript.adoc
@@ -1,4 +1,4 @@
-= Cloud SDK Console Access Library TypeScript Tutorial
+= pass:[<br/>]Cloud SDK Console Access Library TypeScript Tutorial
 :organization: Sony
 :encoding: utf-8
 :lang: en
